--- a/Run_From_Notebook.ipynb
+++ b/Run_From_Notebook.ipynb
@@ -54,7 +54,7 @@
     {
       "cell_type": "code",
       "source": [
-        "! python drive/MyDrive/GNN-NAS-Group10/code/search-cora.py"
+        "! python drive/MyDrive/GNN-NAS-Group10/code/search-cora.py 50 10 3"
       ],
       "metadata": {
         "id": "a2Zwvj-3Ymk9"
