--- a/Run_From_Notebook.ipynb
+++ b/Run_From_Notebook.ipynb
@@ -61,6 +61,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! python drive/MyDrive/GNN-NAS-Group10/code/search-pubmed.py 50 10 3"
+      ],
+      "metadata": {
+        "id": "pa4T8gTTNmaJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
