--- a/Run_From_Notebook.ipynb
+++ b/Run_From_Notebook.ipynb
@@ -52,6 +52,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The command line arguments below are (cycles, population_size, sample_size).\n",
+        "\n",
+        "Cycles refers to the number of architectures to create in total.\n",
+        "\n",
+        "Population_size refers to the  number of architectures stored at any given time, from which new architectures are created.\n",
+        "\n",
+        "Sample_size is the number of randomly chosen architectures from the current population, after which the one with the highest validation accuracy is chosen to be the parent of the next architecture."
+      ],
+      "metadata": {
+        "id": "bUdkS2-0WCcB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "! python drive/MyDrive/GNN-NAS-Group10/code/search-cora.py 50 10 3"
